# violet

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  curl.md
backend/src/: db.rs  errors.rs  main.rs  server.rs  similarity.rs
backend/src/routes/: collection.rs  docs.rs  system.rs
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/embed/: route.ts
frontend/app/api/images/: route.ts
frontend/app/collections/: page.tsx
frontend/app/components/: ComboboxCollection.tsx  Dashboard.tsx  EmbedImage.tsx  EmbedText.tsx  Header.tsx  ImageCard.tsx  JSONLSearch.tsx  Logs.tsx  Main.tsx  RecommendationSystem.tsx  RequestForm.tsx  SemanticSearch.tsx  Sidebar.tsx  Stats.tsx  theme-provider.tsx
frontend/app/components/sections/: Collections.tsx  Docs.tsx  Search.tsx
frontend/app/docs/: ClientBox.tsx  Page.mdx  page.tsx
frontend/app/embed/: page.tsx
frontend/app/lib/: api.ts  embed_api.ts
frontend/app/recommendation_engine/: page.tsx
frontend/app/search/: page.tsx
frontend/app/semantic_search/: page.tsx
frontend/app/store/: collection-select.ts  collections.ts  logStore.ts  requestStore.ts  ui.ts  useStore.ts
frontend/content/docs/: API.md
ingest/: .gitignore  README.md  embed_img.py  embed_text.py  main.py  pyproject.toml  server.py
