[package]
edition = "2021"
license = "MIT"
version = "0.1.0"
name = "violetdb"
readme = "README.md"
categories = ["science", "database-implementations"]
repository = "https://github.com/your-org/violetdb"
description = "A high-performance vector database in Rust."
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
keywords = ["database", "nearest-neighbor", "embedding"]

[dependencies]
axum = "0.6.18"
rayon = "1.7.0"
anyhow = "1.0.71"
serde = "1.0.165"
bincode = "1.3.3"
tracing = "0.1.37"
schemars = { version = "0.8.12", features = ["chrono"] }
thiserror = "1.0.40"
serde_json = "1.0.99"
lazy_static = "1.4.0"
aide = { version = "0.11.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["full"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
http = "0.2.9"
headers = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"

[build-dependencies]
chrono = "0.4.31"
